# react-native-keys

./: .gitignore  .mtslconfig.json  .npmignore  .yarnrc.yml  CONTRIBUTING.md  LICENSE  README.md  biome.json  crypto.cpp  crypto.hpp  jniAndroid.js  jniIOS.js  keysAndroid.js  keysIOS.js  lefthook.yml  package.json  react-native-jni-keys.podspec  react-native-keys.podspec  test.cpp  test.hpp  tsconfig.json
.circleci/: config.yml
.github/actions/setup/: action.yml
.github/workflows/: build-android.yml  build-ios.yml  build-project.yml  publishnpm.yml  validate-android.yml  validate-js.yml
android/: CMakeLists.txt  RNKeys.gradle  build.gradle  cpp-adapter.cpp  gradle.properties  jniKeys.gradle
android/androidcpp/: mediator.cpp
android/androidcpp/include/openssl/: configuration.h
android/cpp/: crypto.cpp  encrypt.h
android/src/main/: AndroidManifest.xml  AndroidManifestDeprecated.xml
android/src/main/java/com/reactnativejnikeys/: CLibController.java  JniKeysModule.java  JniKeysModule.kt  JniKeysPackage.java  JniKeysPackage.kt
android/src/main/java/com/reactnativejnikeys/c/: CMakeLists.txt  CryptographicPackage.mm  crypto.cpp  crypto.hpp  mediator.cpp
android/src/main/java/com/reactnativekeysjsi/: KeysModule.java  KeysPackage.java  PrivateKey.java
android/src/main/java/com/rnkeys/: CLibController.java  JniKeysModule.java  JniKeysPackage.java  KeysPackage.java
android/src/main/java/com/rnkeys/c/: crypto.hpp  mediator.cpp
android/src/newarch/: KeysSpec.java
android/src/oldarch/: KeysSpec.java
cpp/: crypto.cpp  crypto.h  decryptor.cpp  decryptor.h  encrypted_functions.h  password_functions.h
docs/: react-native-config-migration-guide.md  workflow.md
example/: .gitignore  Gemfile  README.md  app.json  babel.config.js  jnikeys.json  keys.development.json  keys.json  keys.production.json  keys.staging.json  metro.config.js  package.json  tsconfig.json
example/android/: settings.gradle
example/android/app/: build.gradle  keyExample.keystore
example/android/app/src/debug/java/com/example/reactnativejnikeys/: ReactNativeFlipper.java
example/android/app/src/debug/java/com/example/rnkeys/: ReactNativeFlipper.java
example/android/app/src/debug/java/com/jsikeysexample/: ReactNativeFlipper.java
example/android/app/src/debug/java/com/keysexample/: ReactNativeFlipper.java
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/com/example/reactnativejnikeys/: MainActivity.java  MainApplication.java
example/android/app/src/main/java/com/example/rnkeys/: MainActivity.java  MainApplication.java
example/android/app/src/main/java/com/jsikeysexample/: MainActivity.java  MainApplication.java
example/android/app/src/main/java/com/keysexample/: MainActivity.java  MainApplication.java
example/android/app/src/main/res/values/: strings.xml
example/android/app/src/release/java/com/jsikeysexample/: ReactNativeFlipper.java
example/android/app/src/release/java/com/keysexample/: ReactNativeFlipper.java
example/ios/: Config.xcconfig  File.swift  Podfile  test.cpp  test.hpp  tmp.xcconfig
example/ios/Example/: AppDelegate.mm  Info.plist
example/ios/Example.xcodeproj/: project.pbxproj
example/ios/Example.xcodeproj/xcshareddata/xcschemes/: Development.xcscheme  Example.xcscheme  Production.xcscheme  Staging.xcscheme
example/ios/JniKeysExample/: AppDelegate.m  Info.plist
example/ios/JniKeysExample.xcodeproj/: project.pbxproj
example/ios/JniKeysExample.xcodeproj/xcshareddata/xcschemes/: JniKeysExample.xcscheme
example/ios/JniKeysExample.xcworkspace/: contents.xcworkspacedata
example/ios/JniKeysExample/Base.lproj/: LaunchScreen.xib
example/ios/KeysExample/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/KeysExample.xcodeproj/: project.pbxproj
example/ios/KeysExample.xcodeproj/xcshareddata/xcschemes/: KeysExample-Dev.xcscheme  KeysExample-Production.xcscheme  KeysExample-Staging.xcscheme
example/ios/KeysExample.xcworkspace/: contents.xcworkspacedata
example/ios/KeysExampleTests/: KeysExampleTests.m
example/ios/RNKeysExample/: AppDelegate.m
example/ios/RNKeysExample.xcodeproj/: project.pbxproj
example/ios/RNKeysExample.xcodeproj/xcshareddata/xcschemes/: RNKeysExample.xcscheme
example/ios/RNKeysExample.xcworkspace/: contents.xcworkspacedata
example/ios/RNKeysExample/Base.lproj/: LaunchScreen.xib
example/src/: App.tsx
exampleExpo/: app.config.js  babel.config.js  eas.json  keys.development.json  keys.production.json  keys.staging.json  metro.config.js  package.json  react-native.config.js  webpack.config.js
exampleExpo/android/: gradle.properties  settings.gradle
exampleExpo/android/app/: build.gradle
exampleExpo/android/app/src/debug/java/com/keys/development/: ReactNativeFlipper.java
exampleExpo/android/app/src/main/: AndroidManifest.xml
exampleExpo/android/app/src/main/java/com/keys/development/: MainActivity.java  MainApplication.java
exampleExpo/android/app/src/main/res/values/: strings.xml
exampleExpo/android/app/src/release/java/com/keys/development/: ReactNativeFlipper.java
exampleExpo/ios/: Podfile  tmp.xcconfig
exampleExpo/ios/devapp/: Info.plist
exampleExpo/ios/devapp.xcodeproj/: project.pbxproj
exampleExpo/ios/devapp.xcodeproj/xcshareddata/xcschemes/: devapp.xcscheme
exampleExpo/ios/devapp.xcworkspace/: contents.xcworkspacedata
exampleExpo/src/: App.tsx
ios/: GeneratedDotEnv.m  JniKeys.h  JniKeys.m  JniKeys.mm  Keys.h  Keys.mm  crypto.cpp  crypto.h  crypto.hpp  privateKey.m
ios/JniKeys.xcodeproj/: project.pbxproj
ios/Keys.xcodeproj/: project.pbxproj
ios/RNKeys.xcodeproj/: project.pbxproj
plugin/: tsconfig.json
plugin/src/: index.ts  pluginConfig.ts
plugin/src/android/: addProductFlavors.ts  buildGradleProperties.ts  buildscriptDependency.ts  index.ts
plugin/src/ios/: index.ts  preactionScript.ts
scripts/: bootstrap.js
src/: index.ts  index.tsx  type.ts
src/spec/: NativeKeys.ts
src/util/: common.js  generate-header.js  jniFilesTemplateAndroid.js  jniFilesTemplateIos.js  keysFilesTemplateAndroid.js  keysFilesTemplateIos.js
